@@ -1,4 +1,5 @@
 4.1.1
+	Fix bogus ACL when using features not compiled in
 	Fix corruption in urlcheck parsing (Benoit Branciard)
 	Document what package contains libmilter
 	Fix error about stat in greylist.conf (Bob Smith)
